# QMAP

./: .gitignore  README.md  config.yml  environment.yml  heavyTest.py  lightTest.py  main.py  medTest.py  problemRunner.py  problemRunner_v1.py  pyproject.toml  requirements.txt  requirements_v1.txt  requirements_v2.txt  setup_envs.sh  testing.ipynb
Problems/: BV.py  Grovers.py  ProblemBase.py  QFT.py  QPE.py  RNG.py
docs/: old_README.md
envs/: ibm.yml  ionq.yml  iqm.yml  qmap_conda.yml  quantinuum.yml
plots/: plot_results.ipynb
results/: aer_simulator_2026-01-22 22:54:43.179470.csv  aria-1_2026-01-14 23:51:58.054296.csv  aria-1_2026-01-15 00:06:55.145587.csv  emerald:mock_2026-01-15 00:32:32.696357.csv  forte-1_2026-02-18_23:32:45.csv  garnet:mock_2026-01-15 00:33:32.457861.csv  garnet_mock_2025-07-20 20:29:29.203602.csv  garnet_mock_2025-07-20 20:59:37.112732.csv  garnet_mock_2025-07-21 21:56:34.330954.csv  ibm_boston_2026-01-13 15:32:22.958348.csv  ibm_boston_2026-01-13 15:59:39.491177.csv  ibm_pittsburgh_2026-02-10 10:03:30.201716.csv  ibm_pittsburgh_2026-02-10 10:16:47.200276.csv  ibm_pittsburgh_2026-02-10_bv.csv  ibm_pittsburgh_2026-02-10_grover.csv  sirius:mock_2026-01-15 00:44:25.021358.csv
src/: problemRunner.py
src/Problems/: ProblemBase.py
src/qmap/: __init__.py  config.yml  main.py  problemRunner.py  utils.py
src/qmap/problems/: BV.py  Grovers.py  QFT.py  (+4 more)
src/tests/: bv_exps.py  grovers_exps.py  heavyTest.py  lightTest.py  medTest.py  run_exps.py  test_problems.py
tests/: bv_exps.py  grovers_exps.py  heavyTest.py  lightTest.py  medTest.py
